--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Katie Mae Martin's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href='' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href='ADD FONT HERE' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
+      <div class="wrapper">
+        <p>
+          Katie Mae Martin
+        </p>
+      </div>
     </header>
     <section>
     </section>
