--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
   <body>
     <header>
       <div class="wrapper">
-        <p>
-          Katie Mae Martin
-        </p>
+        <div class="grid">
+          <div class="grid__item one-half">
+            <p>
+              Katie Mae Martin
+            </p>
+          </div>
+          <nav class="grid__item one-half  push--one-quarter">
+            <a href="">Work</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+          </nav>
+        </div>
       </div>
     </header>
     <section>
