--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="grid">
           <div class="grid__item one-half">
             <p>
-              Katie Mae Martin
+              KATIE MAE MARTIN
             </p>
           </div>
-          <nav class="grid__item one-half  push--one-quarter">
-            <a href="">Work</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+          <nav class="grid__item one-half  push--one-sixth">
+            <a href="">WORK</a>
+            <a href="">ABOUT</a>
+            <a href="">CONTACT</a>
           </nav>
         </div>
       </div>
