header and nav work

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="grid">
           <div class="grid__item one-half">
             <p>
-              KATIE MAE MARTIN
+              katie mae martin
             </p>
           </div>
-          <nav class="grid__item one-half  push--one-sixth">
-            <a href="">WORK</a>
-            <a href="">ABOUT</a>
-            <a href="">CONTACT</a>
+          <nav class="grid__item one-half">
+            <a href="" class="active-link">work</a>
+            <a href="">about</a>
+            <a href="">contact</a>
           </nav>
         </div>
       </div>
