working on styling, size problem with name

--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <title>Katie Mae Martin's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="/_sass/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
+    <header role="banner">
       <div class="wrapper">
         <div class="grid">
           <div class="grid__item one-half">
-            <p>
-              katie mae martin
-            </p>
+            <p class="name">katie mae martin</p>
           </div>
-          <nav class="grid__item one-half">
+          <nav role="navigation" class="grid__item one-half">
             <a href="" class="active-link">work</a>
             <a href="">about</a>
             <a href="">contact</a>
@@ -25,7 +23,15 @@
         </div>
       </div>
     </header>
-    <section>
+    <section role="summary">
+      <div class="wrapper">
+        <div class="grid">
+          <div class="grid__item">
+            <h1>ux designer</h1>
+            <p>Hi! I solve problems for interfaces using research and good design.</p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
     </footer>
