working on selected works section, still have problem with name sizing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
         </div>
       </div>
     </section>
+    <section role="">
+      <div class="wrapper">
+        <div class="grid">
+          <div class="grid__item">
+            <h2>selected works</h2>
+            <ul class="works-list">
+              <li>Poenaru Pen Company..............................eCommerce Website</li>
+              <li>Goodworks...................................................Fundraising Web Application</li>
+              <li>Paycrave.......................................................Mobile App</li>
+              <li>Jottly..............................................................SaaS Startup</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
     </footer>
   </body>
