footer work and adding a tags...inline-block not working in footer?

--- a/index.html
+++ b/index.html
@@ -33,22 +33,37 @@
         </div>
       </div>
     </section>
-    <section role="">
+    <section role="main">
       <div class="wrapper">
         <div class="grid">
           <div class="grid__item">
             <h2>selected works</h2>
             <ul class="works-list">
-              <li>Poenaru Pen Company..............................eCommerce Website</li>
-              <li>Goodworks...................................................Fundraising Web Application</li>
-              <li>Paycrave.......................................................Mobile App</li>
-              <li>Jottly..............................................................SaaS Startup</li>
+              <li><a href="#">Poenaru Pen Company..............................eCommerce Website</a></li>
+              <li><a href="#">Goodworks...................................................Fundraising Web Application</a></li>
+              <li><a href="#">Paycrave.......................................................Mobile App</a></li>
+              <li><a href="#">Jottly..............................................................SaaS Startup</a></li>
             </ul>
           </div>
         </div>
       </div>
     </section>
     <footer>
+      <div class="wrapper">
+        <div class="grid">
+          <div class="grid__item three-quarters">
+            <ul>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Pinterest</a></li>
+              <li><a href="#">LinkedIn</a></li>
+            </ul>
+          </div>
+          <div class="grid__item one-quarter">
+            <p>&copy; 2016 Katie Martin.</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
