working on hover effects, inline-block not working in footer

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <div class="wrapper">
         <div class="grid">
           <div class="grid__item one-half">
-            <p class="name">katie mae martin</p>
+            <p class="name"><a href="#">katie mae martin</a></p>
           </div>
           <nav role="navigation" class="grid__item one-half">
-            <a href="" class="active-link">work</a>
-            <a href="">about</a>
-            <a href="">contact</a>
+            <a href="#" class="active-link">work</a>
+            <a href="#">about</a>
+            <a href="#">contact</a>
           </nav>
         </div>
       </div>
@@ -39,10 +39,10 @@
           <div class="grid__item">
             <h2>selected works</h2>
             <ul class="works-list">
-              <li><a href="#">Poenaru Pen Company..............................eCommerce Website</a></li>
-              <li><a href="#">Goodworks...................................................Fundraising Web Application</a></li>
-              <li><a href="#">Paycrave.......................................................Mobile App</a></li>
-              <li><a href="#">Jottly..............................................................SaaS Startup</a></li>
+              <li><a href="#"><strong>Poenaru Pen Company</strong>..............................eCommerce Website</a></li>
+              <li><a href="#"><strong>Goodworks</strong>...................................................Fundraising Web Application</a></li>
+              <li><a href="#"><strong>Paycrave</strong>.......................................................Mobile App</a></li>
+              <li><a href="#"><strong>Jottly</strong>..............................................................SaaS Startup</a></li>
             </ul>
           </div>
         </div>
@@ -55,7 +55,7 @@
             <ul>
               <li><a href="#">Twitter</a></li>
               <li><a href="#">Instagram</a></li>
-              <li><a href="#">Pinterest</a></li>
+              <li><a href="#">GitHub</a></li>
               <li><a href="#">LinkedIn</a></li>
             </ul>
           </div>
