hover effects, inline-block not working in footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="grid">
           <div class="grid__item">
             <h1>ux designer</h1>
-            <p>Hi! I solve problems for interfaces using research and good design.</p>
+            <p>Hi! I solve problems for user interfaces using research and good design.</p>
           </div>
         </div>
       </div>
